[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenly-auth"
version = "1.0.0"
authors = [
  { name="err0rgod", email="nirbhayerror@gmail.com" },
]
description = "A professional-grade, database-agnostic authentication and session management utility library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "pyjwt>=2.8.0",
    "argon2-cffi>=23.1.0",
]

[project.urls]
"Homepage" = "https://github.com/err0rgod/tokenly"
"Bug Tracker" = "https://github.com/err0rgod/tokenly/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenly_auth*"]

[tool.ruff]
# Target Python version
target-version = "py38"

# Same as Black.
line-length = 100

[tool.ruff.lint]
# Enable Pyflakes (F) and a subset of the pycodestyle (E) codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use profile "black" for formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
